force-app/main/default/objects/Sani_Certificates__mdt/Sani_Certificates__mdt.object-meta.xml
<CustomObject>
    <label>Sani Certificates</label>
    <pluralLabel>Sani Certificates</pluralLabel>
</CustomObject>