force-app/main/default/objects/Sani_Certificates__mdt/fields/Pdfname__c.field-meta.xml
<CustomField>
    <fullName>Pdfname__c</fullName>
    <label>Pdfname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>