force-app/main/default/objects/Sani_Certificates__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>