force-app/main/default/objects/Sani_Certificates__mdt/fields/Template_Name_FR__c.field-meta.xml
<CustomField>
    <fullName>Template_Name_FR__c</fullName>
    <label>Template Name FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>